@@ -1,6 +1,6 @@
 [project]
 name = "pylucas"
-version = "1.1.4"
+version = "2.0.0"
 description = "Lucas' Functional Distribution, Which Integrates Some Commonly Used."
 license = { file = "LICENSE" }
 authors = [
