@@ -1,61 +1,24 @@
+from __future__ import annotations # 解决类型注解中的引用问题, 必须放在首位导入
 import json, tomllib, tomli_w
 from typing import Literal
 from copy import deepcopy
-from os.path import exists
-from __future__ import annotations
+from os.path import exists, normpath
 
 class ConfigEditor():
-    """_Make Config Great Again._
-    """
-    def __init__(self,
-                 File: Literal['<Temporary>'],
-                 Data: dict = {},
-                 FileMode: Literal['toml', 'json'] = 'toml'):
-        """_Make Config Great Again._
-
-        Args:
-            File (Literal['\<Temporary\>']): _description_
-            Data (dict, optional): _description_. Defaults to {}.
-            FileMode (Literal['toml', 'json'], optional): _description_. Defaults to 'toml'.
-        """
-        self.__Editor: ConfigEditor_Toml | ConfigEditor_Json
-
-        match FileMode:
-            case 'toml': self.__Editor = ConfigEditor_Toml(File=File, Data=Data)
-            case 'json': self.__Editor = ConfigEditor_Json(File=File, Data=Data)
-            case     _ : raise Exception('Target File Mode Not Support.')
-
-    def ToDict(self) -> dict:
-        return self.__Editor.ToDict()
-
-    def DataCover(self, Data: dict) -> None:
-        return self.__Editor.DataCover(Data=Data)
-
-    def GetKeys(self, KeyLocate: str = '') -> tuple:
-        return self.__Editor.GetKeys(KeyLocate=KeyLocate)
-
-    def POPKey(self, KeyLocate: str) -> None:
-        return self.__Editor.POPKey(KeyLocate=KeyLocate)
-
-    def GetValue(self, KeyLocate: str) -> ConfigEditor | any:
-        return self.__Editor.GetValue(KeyLocate=KeyLocate)
-
-    def SetValue(self, KeyLocate: str, Value: any):
-        return self.__Editor.SetValue(KeyLocate=KeyLocate, Value=Value)
-
-    def AddValue(self, KeyLocate: str, Value: any):
-        return self.__Editor.AddValue(KeyLocate=KeyLocate, Value=Value)
-
-    def GetNestedPaths(self) -> list:
-        return self.__Editor.GetNestedPaths()
-
-class ConfigEditor_Basic():
     def __init__(self,
                  File: Literal['<Temporary>'],
                  Data: dict = {}):
         self._Temporary: bool = True if File == '<Temporary>' else False
-        self._Flie: str = File
-        self._Data: dict = deepcopy(Data) if self._Temporary else {}
+        self._Flie: str = normpath(File)
+        self._Data: dict = deepcopy(Data)
+
+        FileMode: str = self._Flie.split('.')[-1].upper() if not self._Temporary else 'TOML'
+        match FileMode:
+            case 'TOML':
+                self._SL = ConfigEditorSL_Toml(Temporary=self._Temporary, File=self._Flie)
+            case 'JSON':
+                self._SL = ConfigEditorSL_Json(Temporary=self._Temporary, File=self._Flie)
+            case     _ : raise Exception('Target File Mode Not Support.')
 
         match self._Temporary:
             case True:
@@ -64,20 +27,17 @@ class ConfigEditor_Basic():
                 if exists(File): self.Load()
                 else: self.Save(File)
 
+    def __repr__(self):
+        return str(self.ToDict)
+
     def Initialize(self):
         pass
 
     def Load(self):
-        if self._Temporary: return
+        self._Data = self._SL.Load()
 
     def Save(self, File: str = ''):
-        if File:
-            FileRoot: str = File[:File.rfind('\\')]
-            if not exists(path=FileRoot):
-                raise FileNotFoundError(rf"Path Root {FileRoot} not exists.")
-            self._Temporary = False
-            self._Flie = File
-        if not self._Flie and self._Temporary: return
+        self._SL.Save(Data=self._Data, File=File)
 
     # Pair --------------------------------------------------
     """_下面的两个方法中的原变量和新变量不会存在任何引用关系._"""
@@ -121,20 +81,34 @@ class ConfigEditor_Basic():
         self.Save()
 
     # Pair --------------------------------------------------
-    """_下面的三个方法中的原变量和新变量不会存在任何引用关系._"""
+    """_下面的三个方法中的原变量和新变量仍存在引用关系._"""
 
-    def GetValue(self, KeyLocate: str) -> ConfigEditor | any:
+    def GetValue(self,
+                 KeyLocate: str,
+                 ResultType: Literal['ConfigEditor', 'Self'] = 'ConfigEditor') -> ConfigEditor | any:
+        """_获取键值, 键值与源字典存在引用关系._
+
+        Args:
+            KeyLocate (str): _description_
+            ResultType (Literal['ConfigEditor', 'Self'], optional): _description_. Defaults to 'ConfigEditor'.
+
+        Raises:
+            KeyError: _description_
+
+        Returns:
+            ConfigEditor | any: _description_
+        """
         KeyLocate: list = KeyLocate.split('.')
         TempData: any = self._Data
         for TempKey in KeyLocate:
             if not isinstance(TempData, dict): raise KeyError(f'{KeyLocate} -> {TempKey}')
             TempData = TempData[TempKey]
-        if isinstance(TempData, dict): TempData: ConfigEditor = ConfigEditor(Data_Toml=TempData)
+        if isinstance(TempData, dict) and ResultType == 'ConfigEditor': TempData: ConfigEditor = ConfigEditor(File='<Temporary>', Data=TempData)
         else: pass
-        return deepcopy(TempData)
+        return TempData
 
     def SetValue(self, KeyLocate: str, Value: any):
-        """_summary_
+        """_写入键值, 键值与目标字典存在引用关系._
 
         Args:
             KeyLocate (str): _KeyLocate 所指示的键路径可以不存在于 self._Data 中._
@@ -154,11 +128,11 @@ class ConfigEditor_Basic():
                     TempData = TempData[TempKey]
             else:
                 raise TypeError(f'TempData: {type(TempData)} = {TempData}')
-        TempData.update({KeyLocate[-1]: deepcopy(Value)})
+        TempData.update({KeyLocate[-1]: Value})
         self.Save()
 
     def AddValue(self, KeyLocate: str, Value: any):
-        """_summary_
+        """_向可迭代键值中添加元素, 元素与目标字典存在引用关系._
 
         Args:
             KeyLocate (str): _KeyLocate 所指示的键路径必须存在于 self._Data 中._
@@ -183,14 +157,16 @@ class ConfigEditor_Basic():
             case 'tuple':
                 raise TypeError('\'tuple\' object Unable to Add Element')
             case 'list':
-                TempData.append(deepcopy(Value))
+                TempData.append(Value)
             case 'dict':
                 if type(Value) != dict: raise TypeError(f'\'dict\' object Unable to Add a Element of {type(Value).__name__}')
-                TempData.update(deepcopy(Value))
+                TempData.update(Value)
             case _:
                 raise TypeError(f'\'{type(TempData).__name__}\' object UnSupport to AddElement')
 
         self.Save()
+
+    # Pair --------------------------------------------------
 
     def GetNestedPaths(self, KeyLocate: str = '') -> list:
         NestedPaths: list = []
@@ -205,28 +181,68 @@ class ConfigEditor_Basic():
         DepthRecursion(KeyLocate)
         return NestedPaths
 
-class ConfigEditor_Json(ConfigEditor_Basic):
-    def Load(self) -> None:
-        super().Load()
-        with open(file=self._Flie, mode='r', encoding='utf-8') as File:
-            self._Data = json.load(File)
-            File.close()
+class ConfigEditorSL():
+    def __init__(self,
+                 Temporary: bool,
+                 File: str):
+        self._Temporary: bool = Temporary
+        self._Flie: str = File
 
-    def Save(self, File: str = '') -> None:
-        super().Save(File)
-        with open(file=self._Flie, mode='w', encoding='utf-8') as File:
-            json.dump(self._Data, File, ensure_ascii=False, indent=4)
-            File.close()
+    def Load(self) -> dict:
+        pass
 
-class ConfigEditor_Toml(ConfigEditor_Basic):
-    def Load(self) -> None:
-        super().Load()
+    def Save(self, Data: dict, File: str = '') -> None:
+        if File:
+            FileRoot: str = normpath(File)
+            FileRoot: str = FileRoot[FileRoot.rfind('\\')]
+            if not exists(path=FileRoot):
+                raise FileNotFoundError(rf"Path Root {FileRoot} not exists.")
+            self._Temporary = False
+            self._Flie = File
+        if not self._Flie and self._Temporary: return
+
+class ConfigEditorSL_Toml(ConfigEditorSL):
+    def __init__(self, Temporary, File):
+        super().__init__(Temporary, File)
+
+    def Load(self) -> dict:
         with open(file=self._Flie, mode='rb') as File:
-            self._Data = tomllib.load(File)
+            Data = tomllib.load(File)
             File.close()
+        return Data
 
-    def Save(self, File: str = '') -> None:
+    def Save(self, Data: dict, File: str = '') -> None:
         super().Save(File)
         with open(file=self._Flie, mode='wb') as File:
-            tomli_w.dump(self._Data, File)
+            tomli_w.dump(Data, File)
             File.close()
+
+class ConfigEditorSL_Json(ConfigEditorSL):
+    def __init__(self, Temporary, File):
+        super().__init__(Temporary, File)
+
+    def Load(self) -> dict:
+        with open(file=self._Flie, mode='r', encoding='utf-8') as File:
+            Data = json.load(File)
+            File.close()
+        return Data
+
+    def Save(self, Data: dict, File: str = '') -> None:
+        super().Save(File)
+        with open(file=self._Flie, mode='w', encoding='utf-8') as File:
+            json.dump(Data, File, ensure_ascii=False, indent=4)
+            File.close()
+
+if __name__ == '__main__':
+    test = ConfigEditor(File=r'test/config.json', Data={"Mods": {}, "Groups": {}})
+
+    print(test)
+    print(test.ToDict)
+
+    test.SetValue('1.2.3.4', {})
+    test.SetValue('2.2.3.4', "123")
+    test.SetValue('3.2.3.4', "123")
+    asd = test.GetValue('1.2.3.4')
+
+    print(asd.ToDict)
+    print(test.ToDict)
